# unity-mcp-gg

./: .editorconfig  .gitignore  README.md
MCPForUnity/Server~/: error_log.txt  pyproject.toml  test_output.txt  wrapper.js
MCPForUnity/Server~/src/: main.py
MCPForUnity/Server~/src/core/: logging_decorator.py  logging_setup.py  telemetry.py  telemetry_decorator.py
MCPForUnity/Server~/src/models/: __init__.py  models.py  unity_response.py
MCPForUnity/Server~/src/services/registry/: __init__.py  resource_registry.py  tool_registry.py
MCPForUnity/Server~/src/services/resources/: layers.py  (+13 more)
MCPForUnity/Server~/src/transport/: models.py  plugin_hub.py  plugin_registry.py  unity_instance_middleware.py  unity_transport.py
MCPForUnity/Server~/src/utils/: module_discovery.py  reload_sentinel.py
MCPForUnity/Server~/tests/integration/: conftest.py  test_domain_reload_resilience.py  test_edit_normalization_and_noop.py  test_edit_strict_and_warnings.py  test_find_in_file_minimal.py  test_get_sha.py  test_helpers.py  test_improved_anchor_matching.py  test_instance_routing_comprehensive.py  test_instance_targeting_resolution.py  test_json_parsing_simple.py  test_logging_stdout.py  test_manage_asset_json_parsing.py  test_manage_asset_param_coercion.py  test_manage_gameobject_param_coercion.py  test_manage_script_uri.py  test_read_console_truncate.py  test_resources_api.py  test_script_editing.py  test_script_tools.py  test_telemetry_endpoint_validation.py  test_telemetry_queue_worker.py  test_telemetry_subaction.py  test_transport_framing.py  test_validate_script_summary.py
(+104 files in other folders)
