[project]
name = "MCPForUnityServer"
version = "8.2.3"
description = "MCP for Unity Server: A Unity package for Unity Editor integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.28.1",
 "fastmcp>=2.13.3",
 "mcp>=1.21.2",
 "pydantic>=2.12.5",
 "fastapi>=0.121.1",
 "uvicorn>=0.38.0",
 "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
mcp-for-unity = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"